--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,31 +2,49 @@ name: CI 🚧
 
 on:
   push:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  test:
+  setup:
+    name: Setup 🚧
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write
       contents: read
 
     steps:
       - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
 
-      - name: OpenTofu fmt
-        id: fmt
-        run: tofu fmt -check
-        continue-on-error: true
-
       - name: OpenTofu Init
         id: init
         run: tofu init
 
+  validate:
+    name: Validate ✅
+    runs-on: ubuntu-latest
+    needs: setup
+    permissions:
+      contents: read
+    
+    steps:
+      - name: OpenTofu fmt
+        id: fmt
+        run: tofu fmt -check
       - name: OpenTofu Validate
         id: validate
         run: tofu validate -no-color
 
+  plan:
+    name: Plan 📖
+    runs-on: ubuntu-latest
+    needs: setup
+    permissions:
+      pull-requests: write
+      contents: read
+    
+    steps:
       - name: OpenTofu Plan
         id: plan
         run: tofu plan -no-color
