--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,3 +116,26 @@ jobs:
                 body: output
               })
             }
+  
+  apply:
+    name: Apply 🚀
+    runs-on: ubuntu-latest
+    needs:
+      - plan
+      - validate
+    timeout-minutes: 5
+    permissions:
+      pull-requests: write
+      contents: read
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: opentofu/setup-opentofu@v1
+      - name: OpenTofu Init
+        id: init
+        run: tofu init
+
+      - name: OpenTofu Apply
+        id: apply
+        run: tofu apply -auto-approve -no-color
