--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,19 @@
 {
 	"name": "Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.9-bookworm",
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
-		"ghcr.io/robbert229/devcontainer-features/opentofu:1": {}
+		"ghcr.io/robbert229/devcontainer-features/opentofu:1": {},
+		"ghcr.io/hspaans/devcontainer-features/ansible-lint:1": {},
+		"ghcr.io/devcontainers-extra/features/ansible:2": {}
 	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"gamunu.opentofu"
+				"gamunu.opentofu",
+				"redhat.ansible"
 			]
 		}
 	}
