--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
   push:
     paths:
       - "**.tf"
+      - "**.yml"
   pull_request:
     branches:
       - main
@@ -23,6 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    strategy:
+      matrix:
+        module: [01-iaas]
     
     steps:
       - uses: actions/checkout@v4
@@ -30,13 +34,17 @@ jobs:
       - name: OpenTofu Init
         id: init
         run: tofu init
+        working-directory: ${{ matrix.module }}
 
       - name: OpenTofu fmt
         id: fmt
         run: tofu fmt -check
+        working-directory: ${{ matrix.module }}
+
       - name: OpenTofu Validate
         id: validate
         run: tofu validate -no-color
+        working-directory: ${{ matrix.module }}
 
   plan:
     name: Plan 📖
@@ -46,6 +54,9 @@ jobs:
     permissions:
       pull-requests: write
       contents: read
+    strategy:
+      matrix:
+        module: [01-iaas]
 
     steps:
       - uses: actions/checkout@v4
@@ -53,11 +64,13 @@ jobs:
       - name: OpenTofu Init
         id: init
         run: tofu init
+        working-directory: ${{ matrix.module }}
         
       - name: OpenTofu Plan
         id: plan
         run: tofu plan -no-color
         continue-on-error: true
+        working-directory: ${{ matrix.module }}
 
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -129,13 +142,44 @@ jobs:
       contents: read
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
+    strategy:
+      matrix:
+        module: [01-iaas]
+
     steps:
       - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
       - name: OpenTofu Init
         id: init
         run: tofu init
+        working-directory: ${{ matrix.module }}
 
       - name: OpenTofu Apply
         id: apply
         run: tofu apply -auto-approve -no-color
+        working-directory: ${{ matrix.module }}
+
+  ansible:
+    name: Ansible 🎉
+    runs-on: ubuntu-latest
+    needs:
+      - plan
+      - validate
+      - apply
+    timeout-minutes: 5
+    permissions:
+      pull-requests: write
+      contents: read
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    strategy:
+      matrix:
+        module: [01-iaas]
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
