--- a/01-iaas/ansible/playbook.yml
+++ b/01-iaas/ansible/playbook.yml
@@ -3,6 +3,12 @@
   become: true
 
   tasks:
+    - name: Copy hosts file
+      ansible.builtin.copy:
+        dest: /etc/hosts
+        src: hosts
+        mode: '0644'
+
     - name: Add an Apt signing key, uses whichever key is at the URL
       ansible.builtin.apt_key:
         url: https://enterprise.proxmox.com/debian/proxmox-release-bookworm.gpg
